--- a/app.ipynb
+++ b/app.ipynb
@@ -868,25 +868,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "6408f105-dba8-4250-a92f-bcba29792d08",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'notebook2script' from 'nbdev.export' (/Users/abrahampelema/anaconda3/lib/python3.10/site-packages/nbdev/export.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnbdev\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexport\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m notebook2script\n\u001b[1;32m      2\u001b[0m notebook2script(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mapp.ipynb\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'notebook2script' from 'nbdev.export' (/Users/abrahampelema/anaconda3/lib/python3.10/site-packages/nbdev/export.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Export successful\n"
      ]
     }
    ],
    "source": [
-    "from nbdev.export import notebook2script\n",
-    "notebook2script('app.ipynb')"
+    "# from nbdev.export import notebook2script\n",
+    "# notebook2script('app.ipynb')\n",
+    "\n",
+    "import nbdev\n",
+    "nbdev.export.nb_export('app.ipynb', './')\n",
+    "print('Export successful')"
    ]
   },
   {
